---
source: analyzer/tests/errors.rs
expression: errstr

---
error: literal out of range for `u8`
  ┌─ tests/fixtures/errors/numeric_capacity_mismatch/u8_neg.fe:3:19
  │
3 │         return u8(-1)
  │                   ^^ does not fit into type `u8`


